# PySvelte

./: pyproject.toml
